--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "apexcharts": "^3.54.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
+    "ng2-charts": "^6.0.1",
+    "ngx-apexcharts": "^0.6.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
